test/CheckError/Const/ModifyConstParamVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

void f(const int value) {
	// CHECK: .loci:6:2: error: cannot assign non-movable type 'const(int_t)'
	value = 1;
}

void g(int value) {
	value = 1;
}

// CHECK: 1 error generated.
